--- a/wc-dev/css/main.css
+++ b/wc-dev/css/main.css
@@ -346,6 +346,7 @@ footer .copyright {
 footer svg {
   margin-top: 0;
   padding-top: 0;
+  display: inline-block;
 }
 
 /* =============================
@@ -355,27 +356,27 @@ footer svg {
    Mobile
    ----------------------------- */
 @media only screen and (max-width: 680px) {
-  /* line 368, main.scss */
+  /* line 369, main.scss */
   .desktop-hide {
     display: block;
   }
 
-  /* line 372, main.scss */
+  /* line 373, main.scss */
   .mobile-hide {
     display: none;
   }
 
-  /* line 376, main.scss */
+  /* line 377, main.scss */
   header {
     position: relative;
     text-align: center;
     height: 80px;
   }
-  /* line 381, main.scss */
+  /* line 382, main.scss */
   header .padding {
     padding: 0;
   }
-  /* line 385, main.scss */
+  /* line 386, main.scss */
   header menu {
     margin: 80px 0 0;
     padding: 0 0 30px;
@@ -383,13 +384,13 @@ footer svg {
     background: #460d2d;
     width: 100%;
   }
-  /* line 393, main.scss */
+  /* line 394, main.scss */
   header ul {
     margin: 0;
     padding: 0;
     height: auto;
   }
-  /* line 399, main.scss */
+  /* line 400, main.scss */
   header li {
     display: block;
     margin-right: 0;
@@ -398,19 +399,19 @@ footer svg {
     border-bottom: 0px solid;
     padding: 5px 0;
   }
-  /* line 408, main.scss */
+  /* line 409, main.scss */
   header li.active a {
     color: #d3d930;
   }
-  /* line 412, main.scss */
+  /* line 413, main.scss */
   header .sub-menu-parent {
     position: relative;
   }
-  /* line 415, main.scss */
+  /* line 416, main.scss */
   header .sub-menu-parent li {
     background: #681c47;
   }
-  /* line 420, main.scss */
+  /* line 421, main.scss */
   header .sub-menu-container {
     position: relative;
     width: auto;
@@ -419,12 +420,12 @@ footer svg {
     left: auto;
     top: auto;
   }
-  /* line 429, main.scss */
+  /* line 430, main.scss */
   header .sub-menu-button {
     height: auto;
     border-bottom: 0px solid #a38686;
   }
-  /* line 434, main.scss */
+  /* line 435, main.scss */
   header .sub-menu {
     background: #460d2d;
     text-align: center;
@@ -435,7 +436,7 @@ footer svg {
     top: auto;
     display: none;
   }
-  /* line 444, main.scss */
+  /* line 445, main.scss */
   header .sub-menu li {
     display: block;
     margin: 5px 0;
@@ -443,23 +444,23 @@ footer svg {
     height: auto;
     border-bottom: 0;
   }
-  /* line 453, main.scss */
+  /* line 454, main.scss */
   header .sub-menu-hover {
     top: 0;
   }
-  /* line 457, main.scss */
+  /* line 458, main.scss */
   header .sub-menu-clicked {
     display: block;
   }
-  /* line 461, main.scss */
+  /* line 462, main.scss */
   header .sub-menu-button-clicked {
     color: white;
   }
-  /* line 465, main.scss */
+  /* line 466, main.scss */
   header .social-icons {
     display: none;
   }
-  /* line 469, main.scss */
+  /* line 470, main.scss */
   header .menu-button {
     float: right;
     line-height: 80px;
@@ -468,7 +469,7 @@ footer svg {
     transition: color .3s;
     -webkit-transition: color .3s;
   }
-  /* line 477, main.scss */
+  /* line 478, main.scss */
   header .menu-button svg {
     fill: white;
     transition: fill .3s;
@@ -477,29 +478,29 @@ footer svg {
     margin-left: 10px;
     margin-top: -2px;
   }
-  /* line 487, main.scss */
+  /* line 488, main.scss */
   header .menu-button:hover {
     color: white;
   }
-  /* line 490, main.scss */
+  /* line 491, main.scss */
   header .menu-button:hover svg {
     fill: white;
   }
 
-  /* line 498, main.scss */
+  /* line 499, main.scss */
   .col-3 {
     width: 100%;
   }
 
-  /* line 502, main.scss */
+  /* line 503, main.scss */
   footer {
     margin: 40px 0;
   }
-  /* line 505, main.scss */
+  /* line 506, main.scss */
   footer .col-3 {
     padding: 0;
   }
-  /* line 509, main.scss */
+  /* line 510, main.scss */
   footer .copyright {
     margin-top: 40px;
   }
@@ -510,7 +511,7 @@ footer svg {
 /*
  * Hide visually and from screen readers
  */
-/* line 529, main.scss */
+/* line 530, main.scss */
 .hidden {
   display: none !important;
 }
@@ -519,7 +520,7 @@ footer svg {
  * Hide only visually, but have it available for screen readers:
  * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
-/* line 538, main.scss */
+/* line 539, main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -536,7 +537,7 @@ footer svg {
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
-/* line 556, main.scss */
+/* line 557, main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -550,7 +551,7 @@ footer svg {
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-/* line 569, main.scss */
+/* line 570, main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -566,7 +567,7 @@ footer svg {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 586, main.scss */
+/* line 587, main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -575,7 +576,7 @@ footer svg {
   /* 2 */
 }
 
-/* line 591, main.scss */
+/* line 592, main.scss */
 .clearfix:after {
   clear: both;
 }
@@ -597,7 +598,7 @@ footer svg {
    http://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 @media print {
-  /* line 623, main.scss */
+  /* line 624, main.scss */
   *,
   *:before,
   *:after,
@@ -611,18 +612,18 @@ footer svg {
     text-shadow: none !important;
   }
 
-  /* line 632, main.scss */
+  /* line 633, main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 636, main.scss */
+  /* line 637, main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 640, main.scss */
+  /* line 641, main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -631,13 +632,13 @@ footer svg {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  /* line 650, main.scss */
+  /* line 651, main.scss */
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
   }
 
-  /* line 655, main.scss */
+  /* line 656, main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
@@ -648,23 +649,23 @@ footer svg {
    * Printing Tables:
    * http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  /* line 665, main.scss */
+  /* line 666, main.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 670, main.scss */
+  /* line 671, main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 674, main.scss */
+  /* line 675, main.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 680, main.scss */
+  /* line 681, main.scss */
   p,
   h2,
   h3 {
@@ -672,7 +673,7 @@ footer svg {
     widows: 3;
   }
 
-  /* line 686, main.scss */
+  /* line 687, main.scss */
   h2,
   h3 {
     page-break-after: avoid;
