--- a/wc-dev/css/main.css
+++ b/wc-dev/css/main.css
@@ -328,25 +328,20 @@ footer .back-to-top:hover {
 /* line 332, main.scss */
 footer .icon {
   width: 37px;
+  height: 37px;
+  float: left;
   fill: #00a79d;
   transition: fill .3s;
   -webkit-transition: fill .3s;
 }
-/* line 339, main.scss */
+/* line 341, main.scss */
 footer .icon:hover {
   fill: #c5eae6;
 }
-/* line 343, main.scss */
+/* line 345, main.scss */
 footer .copyright {
   margin-top: 5.3em;
   font-size: 78%;
-}
-/* line 348, main.scss */
-footer svg {
-  margin-top: 0;
-  padding-top: 0;
-  display: inline-block;
-  vertical-align: top;
 }
 
 /* =============================
@@ -356,27 +351,27 @@ footer svg {
    Mobile
    ----------------------------- */
 @media only screen and (max-width: 680px) {
-  /* line 369, main.scss */
+  /* line 364, main.scss */
   .desktop-hide {
     display: block;
   }
 
-  /* line 373, main.scss */
+  /* line 368, main.scss */
   .mobile-hide {
     display: none;
   }
 
-  /* line 377, main.scss */
+  /* line 372, main.scss */
   header {
     position: relative;
     text-align: center;
     height: 80px;
   }
-  /* line 382, main.scss */
+  /* line 377, main.scss */
   header .padding {
     padding: 0;
   }
-  /* line 386, main.scss */
+  /* line 381, main.scss */
   header menu {
     margin: 80px 0 0;
     padding: 0 0 30px;
@@ -384,13 +379,13 @@ footer svg {
     background: #460d2d;
     width: 100%;
   }
-  /* line 394, main.scss */
+  /* line 389, main.scss */
   header ul {
     margin: 0;
     padding: 0;
     height: auto;
   }
-  /* line 400, main.scss */
+  /* line 395, main.scss */
   header li {
     display: block;
     margin-right: 0;
@@ -399,19 +394,19 @@ footer svg {
     border-bottom: 0px solid;
     padding: 5px 0;
   }
-  /* line 409, main.scss */
+  /* line 404, main.scss */
   header li.active a {
     color: #d3d930;
   }
-  /* line 413, main.scss */
+  /* line 408, main.scss */
   header .sub-menu-parent {
     position: relative;
   }
-  /* line 416, main.scss */
+  /* line 411, main.scss */
   header .sub-menu-parent li {
     background: #681c47;
   }
-  /* line 421, main.scss */
+  /* line 416, main.scss */
   header .sub-menu-container {
     position: relative;
     width: auto;
@@ -420,12 +415,12 @@ footer svg {
     left: auto;
     top: auto;
   }
-  /* line 430, main.scss */
+  /* line 425, main.scss */
   header .sub-menu-button {
     height: auto;
     border-bottom: 0px solid #a38686;
   }
-  /* line 435, main.scss */
+  /* line 430, main.scss */
   header .sub-menu {
     background: #460d2d;
     text-align: center;
@@ -436,7 +431,7 @@ footer svg {
     top: auto;
     display: none;
   }
-  /* line 445, main.scss */
+  /* line 440, main.scss */
   header .sub-menu li {
     display: block;
     margin: 5px 0;
@@ -444,23 +439,23 @@ footer svg {
     height: auto;
     border-bottom: 0;
   }
-  /* line 454, main.scss */
+  /* line 449, main.scss */
   header .sub-menu-hover {
     top: 0;
   }
-  /* line 458, main.scss */
+  /* line 453, main.scss */
   header .sub-menu-clicked {
     display: block;
   }
-  /* line 462, main.scss */
+  /* line 457, main.scss */
   header .sub-menu-button-clicked {
     color: white;
   }
-  /* line 466, main.scss */
+  /* line 461, main.scss */
   header .social-icons {
     display: none;
   }
-  /* line 470, main.scss */
+  /* line 465, main.scss */
   header .menu-button {
     float: right;
     line-height: 80px;
@@ -469,7 +464,7 @@ footer svg {
     transition: color .3s;
     -webkit-transition: color .3s;
   }
-  /* line 478, main.scss */
+  /* line 473, main.scss */
   header .menu-button svg {
     fill: white;
     transition: fill .3s;
@@ -478,29 +473,29 @@ footer svg {
     margin-left: 10px;
     margin-top: -2px;
   }
-  /* line 488, main.scss */
+  /* line 483, main.scss */
   header .menu-button:hover {
     color: white;
   }
-  /* line 491, main.scss */
+  /* line 486, main.scss */
   header .menu-button:hover svg {
     fill: white;
   }
 
-  /* line 499, main.scss */
+  /* line 494, main.scss */
   .col-3 {
     width: 100%;
   }
 
-  /* line 503, main.scss */
+  /* line 498, main.scss */
   footer {
     margin: 40px 0;
   }
-  /* line 506, main.scss */
+  /* line 501, main.scss */
   footer .col-3 {
     padding: 0;
   }
-  /* line 510, main.scss */
+  /* line 505, main.scss */
   footer .copyright {
     margin-top: 40px;
   }
@@ -511,7 +506,7 @@ footer svg {
 /*
  * Hide visually and from screen readers
  */
-/* line 530, main.scss */
+/* line 525, main.scss */
 .hidden {
   display: none !important;
 }
@@ -520,7 +515,7 @@ footer svg {
  * Hide only visually, but have it available for screen readers:
  * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
  */
-/* line 539, main.scss */
+/* line 534, main.scss */
 .visuallyhidden {
   border: 0;
   clip: rect(0 0 0 0);
@@ -537,7 +532,7 @@ footer svg {
  * to be focusable when navigated to via the keyboard:
  * https://www.drupal.org/node/897638
  */
-/* line 557, main.scss */
+/* line 552, main.scss */
 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
   clip: auto;
@@ -551,7 +546,7 @@ footer svg {
 /*
  * Hide visually and from screen readers, but maintain layout
  */
-/* line 570, main.scss */
+/* line 565, main.scss */
 .invisible {
   visibility: hidden;
 }
@@ -567,7 +562,7 @@ footer svg {
  * 2. The use of `table` rather than `block` is only necessary if using
  *    `:before` to contain the top-margins of child elements.
  */
-/* line 587, main.scss */
+/* line 582, main.scss */
 .clearfix:before,
 .clearfix:after {
   content: " ";
@@ -576,7 +571,7 @@ footer svg {
   /* 2 */
 }
 
-/* line 592, main.scss */
+/* line 587, main.scss */
 .clearfix:after {
   clear: both;
 }
@@ -598,7 +593,7 @@ footer svg {
    http://www.phpied.com/delay-loading-your-print-css/
    ========================================================================== */
 @media print {
-  /* line 624, main.scss */
+  /* line 619, main.scss */
   *,
   *:before,
   *:after,
@@ -612,18 +607,18 @@ footer svg {
     text-shadow: none !important;
   }
 
-  /* line 633, main.scss */
+  /* line 628, main.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 637, main.scss */
+  /* line 632, main.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 641, main.scss */
+  /* line 636, main.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -632,13 +627,13 @@ footer svg {
    * Don't show links that are fragment identifiers,
    * or use the `javascript:` pseudo protocol
    */
-  /* line 651, main.scss */
+  /* line 646, main.scss */
   a[href^="#"]:after,
   a[href^="javascript:"]:after {
     content: "";
   }
 
-  /* line 656, main.scss */
+  /* line 651, main.scss */
   pre,
   blockquote {
     border: 1px solid #999;
@@ -649,23 +644,23 @@ footer svg {
    * Printing Tables:
    * http://css-discuss.incutio.com/wiki/Printing_Tables
    */
-  /* line 666, main.scss */
+  /* line 661, main.scss */
   thead {
     display: table-header-group;
   }
 
-  /* line 671, main.scss */
+  /* line 666, main.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 675, main.scss */
+  /* line 670, main.scss */
   img {
     max-width: 100% !important;
   }
 
-  /* line 681, main.scss */
+  /* line 676, main.scss */
   p,
   h2,
   h3 {
@@ -673,7 +668,7 @@ footer svg {
     widows: 3;
   }
 
-  /* line 687, main.scss */
+  /* line 682, main.scss */
   h2,
   h3 {
     page-break-after: avoid;
